--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 </main>
 	
 <footer>
-	<p>&copy;{{ dateFormat "2006" now }} From {{ .Site.Title }}</p>
+	<p>&copy;{{ dateFormat "2006" now }} From {{ .Site.Title }}.com</p>
 </footer>
 
 <script>
