--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,7 @@ body {
 
 .content {
   margin-bottom: 2rem;
+  justify-content: center;
 }
 
 img {
@@ -31,11 +32,23 @@ img {
 
 .site-nav {
   display: flex;
+  list-style: none;
+  text-decoration: none;
+  justify-content: center;
+  color: white ;
 }
-
+.site-nav a:hover{
+  border-radius: 10px;
+  background-color: yellowgreen;
+  color: wheat;
+  width: auto;
+  height: 15px;
+  padding-top: 0;
+}
 .site-nav a {
   display: block;
   padding: 1rem;
+  text-decoration: none;
 }
 
 .site-nav .logo {
@@ -48,18 +61,26 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 48rem) {
   .site-nav,
   .main-menu {
-    flex-direction: column;
+    flex-direction: row;
   }
 
   .site-nav a {
-    padding: 0.5rem;
+    padding: 0.3rem;
     padding-left: 0;
   }
+  .site-nav a:hover{
+  border-radius: 10px;
+  background-color: yellowgreen;
+  color: wheat;
+  width: auto;
+  height: 20px;
+  padding-top: 0;
 }
 
 /* LISTS */
@@ -70,4 +91,5 @@ img {
 
 .post-snippet h3 {
   margin-bottom: 0.25rem;
+}
 }
