--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,7 +69,9 @@ img {
   .main-menu {
     flex-direction: row;
   }
-
+  footer{
+    text-align: center;
+  }
   .site-nav a {
     padding: 0.3rem;
     padding-left: 0;
